--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "e-clinic-byron",
   "version": "1.0.0",
   "description": "e-Clinic-Byron a Backend system",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "babel-node": "babel-node --presets=/*a*/'"
+    "start": "nodemon --exec babel-node ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,14 +19,23 @@
   "homepage": "https://github.com/jaibalajiui/e-Clinic-Byron#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
+    "http-errors": "~1.6.3",
     "mongoose": "^5.9.26",
-    "nodemon": "^2.0.4"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.0"
   },
   "nodemonConfig": {
     "watch": [
       "src"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4"
   }
 }
