--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "express": "^4.17.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.26",
-    "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "morgan": "~1.9.1"
   },
   "nodemonConfig": {
     "watch": [
