--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.26",
     "morgan": "~1.9.1"
