--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "e-Clinic-Byron a Backend system",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./src/index.js",
+    "start": "env-cmd -f ./.env nodemon --exec babel-node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,15 +18,18 @@
   },
   "homepage": "https://github.com/jaibalajiui/e-Clinic-Byron#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "validator": "^13.1.1"
   },
   "nodemonConfig": {
     "watch": [
